# visage

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  hardware_report.md
.github/workflows/: ci.yml
crates/pam-visage/src/: lib.rs
crates/visage-cli/: Cargo.toml
crates/visage-cli/src/: main.rs  setup.rs
crates/visage-core/src/: alignment.rs  detector.rs  lib.rs  liveness.rs  recognizer.rs  types.rs
crates/visage-hw/src/: camera.rs  lib.rs
crates/visage-models/: Cargo.toml
crates/visage-models/src/: lib.rs
crates/visaged/: Cargo.toml
crates/visaged/src/: config.rs  dbus_interface.rs  engine.rs  main.rs  rate_limiter.rs  store.rs
docs/: STATUS.md  STRATEGY.md  architecture.md  hardware-compatibility.md  liveness-remaining-work.md  operations-guide.md  threat-model.md
docs/decisions/: 002-onnx-inference-kb-and-blocker-resolution.md  003-daemon-integration.md  004-inference-pipeline-implementation.md  007-ubuntu-packaging.md  008-hardware-compatibility-detection.md  010-open-source-contribution-governance.md  011-passive-liveness-landmark-stability.md
docs/marketing/: distribution-strategy.md
docs/research/: architecture-review-and-roadmap.md  domain-audit.md  howdy-analysis-and-visage-design.md  v3-vision.md
packaging/aur/: PKGBUILD  visage.install
packaging/dbus/: org.freedesktop.Visage1.conf
packaging/debian/: postinst  prerm
packaging/nix/: default.nix  module.nix
packaging/systemd/: visage-resume.service  visaged.service
