[package]
name = "visaged"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Visage biometric authentication daemon"

[[bin]]
name = "visaged"
path = "src/main.rs"

[dependencies]
visage-core = { path = "../visage-core" }
visage-hw = { path = "../visage-hw" }
tokio = { workspace = true }
zbus = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
tokio-rusqlite = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
aes-gcm = { workspace = true }
rand = { workspace = true }

[package.metadata.deb]
name = "visage"
maintainer = "Sovren Software"
depends = "libpam-runtime, dbus"
section = "admin"
priority = "optional"
maintainer-scripts = "../../packaging/debian/"
assets = [
    ["target/release/visaged", "usr/bin/", "755"],
    ["target/release/visage", "usr/bin/", "755"],
    ["target/release/libpam_visage.so", "usr/lib/security/pam_visage.so", "644"],
    ["../../packaging/dbus/org.freedesktop.Visage1.conf", "usr/share/dbus-1/system.d/", "644"],
    ["../../packaging/systemd/visaged.service", "usr/lib/systemd/system/", "644"],
    ["../../packaging/systemd/visage-resume.service", "usr/lib/systemd/system/", "644"],
    ["../../packaging/debian/pam-auth-update", "usr/share/pam-configs/visage", "644"],
    ["../../README.md", "usr/share/doc/visage/README.md", "644"],
]
